app/globals.css
@import "tailwindcss";

:root {
  --background: #05050a;
  --foreground: var(--color-slate-12);
}

@theme {
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);

  --color-*: initial;

  --color-green: #67ffde;
  --color-white: #ffffff;
  --color-danger: #CF6679;

  --color-slate-1: rgba(0, 0, 0, 0);
  --color-slate-2: rgba(216, 244, 246, 0.04);
  --color-slate-3: rgba(221, 234, 248, 0.08);
  --color-slate-4: rgba(211, 237, 248, 0.11);
  --color-slate-5: rgba(217, 237, 254, 0.15);
  --color-slate-6: rgba(214, 235, 253, 0.19);
  --color-slate-7: rgba(217, 237, 255, 0.25);
  --color-slate-8: rgba(217, 237, 255, 0.37);
  --color-slate-9: rgba(223, 235, 253, 0.43);
  --color-slate-10: rgba(229, 237, 253, 0.48);
  --color-slate-11: rgba(241, 247, 254, 0.71);
  --color-slate-12: rgba(252, 253, 255, 0.94);
}

@layer base {
  *:focus-visible {
    @apply outline-2 outline-offset-2 outline-green/60;
  }

  *::selection {
    @apply bg-green/10 text-green/60
  }
}


body {
  background: var(--background);
  color: var(--foreground);
}

.root {
  isolation: isolate;
}

